--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <p> 
             -Liste des problèmes : <br>
                 &nbsp &nbsp &nbsp &nbsp &nbsp    - version mobile (menu, redimension)<br>
-                &nbsp &nbsp &nbsp &nbsp &nbsp    - verifier tout 1 par 1<br>
+                &nbsp &nbsp &nbsp &nbsp &nbsp    - mettre lien vers rapport de stage ?<br>
         </p>
 
         <!---footer-->
