--- a/index.html
+++ b/index.html
@@ -297,7 +297,9 @@
                         &nbsp &nbsp &nbsp &nbsp- Concevoir une base de données qui permet désormais à XDO de stocker toutes ses informations et aussi de les réutiliser sur le site dynamiquement.<br>
                         &nbsp &nbsp &nbsp &nbsp- Réaliser une documentation détaillant et expliquant comment modifier le site et la base pour que les membres de l'entreprise puisse
                         s'y retrouver sans trop de difficultés et surtout sans avoir de connaissance en code.<br>
-                    Pour réaliser ces missions, j'ai principalement utilisé les langages SQL, HTML, CSS, PHP et JavaScript.</p>
+                    Pour réaliser ces missions, j'ai principalement utilisé les langages SQL, HTML, CSS, PHP et JavaScript.<br>
+                    Si vous souhaitez découvrir plus en détail mes réalisations, <a href="/static/experiences/designer_farmer/rapport.pdf"> 
+                        cliquez ici</a> pour accéder au rapport de stage.</p>
                     <p>Voici quelques pages du site que j'ai conçu ainsi que le modèle conceptuel des données de la base :</p>
                 </div>
                 <!--Slider avec quelques exemples de réalisations-->            
