--- a/index.html
+++ b/index.html
@@ -364,7 +364,8 @@
 
         <p> 
             -Liste des problèmes : <br>
-                &nbsp &nbsp &nbsp &nbsp &nbsp    - version mobile menu et slider experiences<br>
+                &nbsp &nbsp &nbsp &nbsp &nbsp    - version mobile menu<br>
+		&nbsp &nbsp &nbsp &nbsp &nbsp    - version mobile slider experiences<br>
                 &nbsp &nbsp &nbsp &nbsp &nbsp    - mettre lien vers rapport de stage ?<br>
         </p>
 
