--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         &nbsp &nbsp &nbsp &nbsp- Réaliser une documentation détaillant et expliquant comment modifier le site et la base pour que les membres de l'entreprise puisse
                         s'y retrouver sans trop de difficultés et surtout sans avoir de connaissance en code.<br>
                     Pour réaliser ces missions, j'ai principalement utilisé les langages SQL, HTML, CSS, PHP et JavaScript.<br>
-                    Si vous souhaitez découvrir plus en détail mes réalisations, <a id="rapport" href="static/experiences/designer_farmer/rapport.pdf"> 
+                    Si vous souhaitez découvrir plus en détail mes réalisations, <a id="rapport" href="/rapport.pdf"> 
                         cliquez ici</a> pour accéder au rapport de stage.</p>
                     <p>Voici quelques pages du site que j'ai conçu ainsi que le modèle conceptuel des données de la base :</p>
                 </div>
