--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <a href="https://fr.wikipedia.org/wiki/Three.js"><b>ThreeJS</b></a>
                             <a href="https://fr.wikipedia.org/wiki/Blender"><b>Blender</b></a>
                         </div>
-                        <a href="https://thomas-deschampt.fr">
+                        <a href="https://regal-paprenjak-9c5368.netlify.app">
                             <img src="static/projet/play1.png" width="28px">
                         </a>
                     </div>
