--- a/index.html
+++ b/index.html
@@ -327,6 +327,31 @@
                     </a>
                 </div>
             </div>
+		
+	 <!--Deuxième experience-->
+            <div id="experience">
+                <!--Intitulé de l'experience, date et poste-->
+                <div id="exp_titre">
+                    <h5>CGI – Apogée</h5>
+                    <h6>2023 – Développeur Junior</h6>
+                </div>
+                <!--Description de l'experience-->
+                <div id="exp_text">
+                    <p>&nbsp &nbsp Lors de ma deuxième année d’étude, j’ai eu l’occasion d’intégrer les effectifs de CGI Lyon, une entreprise spécialisée dans les services et 
+                        conseils informatiques qui opère auprès de clients très variés dans le monde entier.<br>
+                        Durant ce stage de 10 semaines, j’ai pu travailler au sein de l’équipe Apogée, le rôle de cette équipe est d’assurer la TMA (Tierce maintenance 
+                        applicative) du logiciel Apogée.</p>
+                        <p>&nbsp &nbsp Apogée est un logiciel de gestion intégré (ERP) dédié aux établissements d'enseignement supérieur en France, sous la responsabilité 
+                        de l’AMUE et du ministère de l’éducation. Il permet de gérer l'ensemble des processus administratifs liés à la vie étudiante , tels que 
+                        l'inscription, la scolarité, les examens, la gestion des notes, la bourse, les stages, etc.</p>
+                        <p>&nbsp &nbsp Ainsi, pendant ce stage, j’ai participé à la maintenance du logiciel en mettant en place différents correctifs et évolutions pour
+                        répondre aux attentes des utilisateurs du logiciel. Notamment en modifiant le fonctionnement de traitements batchs et de traitements Web-Service
+                        mais aussi en faisant évoluer la base de données et ses tables.<br>
+                        Pour réaliser ces missions, j’ai principalement utilisé les langages Oracle SQL, PL/SQL, SQL Loader, Pro*C et Java.
+                        </p>
+
+                </div>
+            </div>
         </section>
 
 
