--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </div>
                     <!-- Division pour la partie de gauche-->
                     <div class="gauche2">
-                        <h3>Simulateur de réactions chimiques • En cours</h3>
+                        <h3>Simulateur de réactions chimiques • 2022</h3>
                         <p>Pour le compte d’un groupe de chimie, j’ai développé un programme de calcul de réactions. Lorsqu’ils formulent, 
                             les chimistes du groupe Condat mélangent de nombreux réactifs. Selon les quantités et la nature de chaque réactif, les
                             réactions peuvent être très différentes. La problématique était donc d’obtenir une méthode de calcul simple, rapide,
