--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
                             <figcaption>Three.Js</figcaption>
                         </a>
                     </figure>
+                    <figure>
+                        <a href="https://vitejs.dev/">
+                            <img src="static/comp/vite.png" height="100px">
+                            <figcaption>Vite.Js</figcaption>
+                        </a>
+                    </figure>
                 </div>
             </div>
 
@@ -132,9 +138,21 @@
                         </a>
                     </figure>
                     <figure>
-                        <a href="https://fr.wikipedia.org/wiki/JavaScript">
-                            <img src="static/comp/js.png" height="100px">
-                            <figcaption>JavaScript</figcaption>
+                        <a href="https://fr.wikipedia.org/wiki/Git">
+                            <img src="static/comp/git.png" height="100px">
+                            <figcaption>Git</figcaption>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="https://fr.wikipedia.org/wiki/Java_(technique)">
+                            <img src="static/comp/java.png" height="100px">
+                            <figcaption>Java</figcaption>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="https://fr.wikipedia.org/wiki/Flutter_(logiciel)">
+                            <img src="static/comp/flutter.png" height="100px">
+                            <figcaption>Flutter</figcaption>
                         </a>
                     </figure>
                 </div>
