--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="#projet">Projets</a></li>
                 <li><a href="#exp">Expériences</a></li>
                 <li><a href="#contact">Contact</a></li>
+		<li><a href="#veille">Veille</a></li>
             </ul>
         </div>
         <div id="marge"></div>
@@ -339,6 +340,20 @@
                         </p>
 
                 </div>
+            </div>
+        </section>
+	    
+	 
+	<!-- quatrieme section veille-->
+        <section id="veille">
+            <br><br><br>
+            <!---titre de la section-->
+            <h2>Veilles.</h2>
+            <!---Division avec les différentes veilles techniques-->
+            <div id="veille">
+                <!--Première vieille-->
+                <h3>Veille technologique</h3>
+                <h3>Veille juridique</h3>
             </div>
         </section>
 
