--- a/index.html
+++ b/index.html
@@ -203,8 +203,9 @@
                 <div class="droite1">
                     <h3>Mon premier portfolio en 3D • 2022</h3>
                     <p>Mon premier essai de Portfolio "assez original". Lors de ma première année d'étude,  j'ai voulu mettre en œuvre mes 
-                        compétences de modélisation et mes compétences en Three JS en représentant ma chambre en 3D. En cliquant sur différents
-                        éléments et objets, il est ainsi possible d’obtenir plus d’informations sur mon profil, mes hobbies…</p>
+                        compétences de modélisation et mes compétences de développement en représentant ma chambre en 3D. L'ojbectif était de rendre
+                        mon portfolio ludique, tout en répondant aux attentes d'un tel site. Ainsi, en cliquant sur différents
+                        éléments et objets, il est possible d’obtenir plus d’informations sur mon profil, mes hobbies…</p>
                     <p>Pour réaliser ce projet j'ai utilisé les langages HTML et CSS pour la conception et la mise en forme du site, 
                     JavaScript pour mettre en place certaines fonctionnalités (comme la traduction) et THREE JS afin d’intégrer de la 3D sur le site.
                     J'ai réalisé la modélisation de chaque objet 3D présents sur le site avec le logiciel Blender.
