--- a/index.html
+++ b/index.html
@@ -263,6 +263,40 @@
                         </div>
                     </div>
             </div>
+		
+	    <!--- tableau du projet 1 texte a droite et video a gauche -->
+            <div class="projet_box">
+                <!-- Division pour la partie de gauche-->
+                <div class="gauche1">
+                    <video autoplay loop muted>
+                        <source src="static/projet/projet3.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas les vidéos.
+                    </video>
+                </div>
+                <!-- Division pour la partie de droite-->
+                <div class="droite1">
+                    <h3>Twitter Graph • 2023</h3>
+                    <p>Utilisant Twitter depuis de nombreuses années, il m’est arrivée de tomber sur des personnes réalisant des 
+                        analyses des interactions entre utilisateurs d'un même réseau social. Et ce en utilisant des graphiques produit à partir des données récupérées
+                        par les API de ces réseaux sociaux. Ainsi, j’ai dans un premier temps récupérer toutes les données de mes likes grâce à l’API 
+                        Twitter pour ensuite les traiter et réaliser un graphique mais comme cela représentait un échantillon assez faible. 
+                        J’ai ensuite décider d’analyser les followers du compte @ZenEmission (42 000 à l’époque).</p>
+                    <p>Pour réaliser ce projet, j’ai utilisé l’API de Twitter, le logiciel de Gephi (logiciel de visualisation de données) et 
+                        l’algorithme de récupération de données fait par Eleurent.
+                    </p>
+                    <!-- Division pour la partie en bas à gauche-->
+                    <div class="bas">
+                        <div>
+                            <a href="https://fr.wikipedia.org/wiki/Gephi"><b>Gephi</b></a>
+                            <a href="https://fr.wikipedia.org/wiki/Interface_de_programmation"><b>API</b></a>
+                        </div>
+                        <a href="https://regal-paprenjak-9c5368.netlify.app">
+                            <img src="static/projet/github.png" width="28px">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <br><br> 
         </section>
         
 
