--- a/index.html
+++ b/index.html
@@ -53,16 +53,22 @@
                         <br>
                         Je m'appelle Thomas Deschampt, j'ai 20 ans et je suis originaire de Lyon.
                         <br><br>
-                        Après avoir obtenu mon bac avec les spécialités « maths et NSI » en 2021, j’ai intégré l’EPSI Lyon.
+                        Étant passionné par l’informatique et les jeux-vidéos depuis de nombreuses années, je me suis naturellement dirigé 
+                        vers un bac avec les spécialités Mathématiques et NSI au lycée. 
+                        <br>
+                        Après avoir obtenu le bac avec mention bien en 2021, j’ai intégré l’EPSI Lyon.
                         Actuellement, je suis en deuxième année d'études d'informatique en suivant un tronc commun « Socle numérique » et en
-                        parallèle, je prépare l'obtention d'un BTS SIO. 
+                        parallèle, je prépare l'obtention d'un BTS SIO (Services Informatiques aux Organisations). 
+                        <br><br>
+                        En préparant ce BTS avec l’option SLAM (Solutions Logicielles et Applications Métiers), j'ai pu approfondir mes connaissances 
+                        en développement et découvrir de nouvelles technologies. J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de 
+                        mettre en pratique mes compétences et de les enrichir.
                         <br>
                         Plus tard, j'envisage de me spécialiser en développement.
                         <br>
                         Après ces deux années, je souhaite préparer un diplôme d'ingénieur ou équivalent, en poursuivant mes études par 3 années d'alternance.
                         <br><br> 
-                        Étant passionné par les nouvelles technologies et le développement depuis de nombreuses années, je serai très heureux 
-                        de pouvoir vous aider dans vos futurs projets.<br>
+                        Je serai très heureux de pouvoir vous aider dans vos futurs projets.<br>
                         Si vous souhaitez en savoir plus sur moi, mes compétences et mes différents projets, ou tout simplement savoir comment me 
                         contacter, n'hésitez pas à explorer ce site et à me faire des retours.
                         <br><br>
