--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                         Je serai très heureux de pouvoir vous aider dans vos futurs projets.<br>
                         Si vous souhaitez en savoir plus sur moi, mes compétences et mes différents projets, ou tout simplement savoir comment me 
                         contacter, n'hésitez pas à explorer ce site et à me faire des retours.
+			Vous pouvez consulter mon CV en cliquant sur le lien suivant <a id="rapport" href="./public/CV.pdf">Accéder au CV</a>.
                         <br><br>
                         Bonne lecture et à bientôt.
                     </p>
