--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <li><a href="#comp">Compétences</a></li>
                 <li><a href="#projet">Projets</a></li>
                 <li><a href="#exp">Expériences</a></li>
-                <li><a href="#contact">Contact</a></li>
-		<li><a href="#veille">Veille</a></li>
+                <li><a href="#contact">Veille</a></li>
+		<li><a href="#veille">Contact</a></li>
             </ul>
         </div>
         <div id="marge"></div>
