--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                         l'inscription, la scolarité, les examens, la gestion des notes, la bourse, les stages, etc.</p>
                         <p>&nbsp &nbsp  Le principal enjeu pour CGI est de répondre aux attentes du client relatives au logiciel, ces attentes peuvent être de simple demande 
                             d’assistance, des demandes de correctifs de bug qui entrainent des comportements non désirés sur l’application ou encore même 
-                            des demandes d’évolutions qui vont entrainer la créations de nouvelles fonctionnalités sur le logiciel.
+                            des demandes d’évolutions qui vont entrainer la création de nouvelles fonctionnalités sur le logiciel.
                         </p>
                         <p>&nbsp &nbsp Ainsi, pendant ce stage, j’ai participé à la maintenance du logiciel en mettant en place différents correctifs et évolutions pour
                         répondre aux attentes des utilisateurs du logiciel. Notamment en modifiant le fonctionnement de traitements batch et de traitements Web-Service
