--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                         <p>&nbsp &nbsp Apogée est un logiciel de gestion intégré (ERP) dédié aux établissements d'enseignement supérieur en France, sous la responsabilité 
                         de l’AMUE et du ministère de l’éducation. Il permet de gérer l'ensemble des processus administratifs liés à la vie étudiante, tels que 
                         l'inscription, la scolarité, les examens, la gestion des notes, la bourse, les stages, etc.</p>
-                        <p>&nbsp &nbsp  Le principal enjeu pour CGI est de répondre aux attentes du client relatives au logiciel, ces attentes peuvent être de simple demande 
+                        <p>&nbsp &nbsp  Le principal enjeu pour CGI est de répondre aux attentes du client relatives au logiciel, ces attentes peuvent être de simples demandes 
                             d’assistance, des demandes de correctifs de bug qui entrainent des comportements non désirés sur l’application ou encore même 
                             des demandes d’évolutions qui vont entrainer la création de nouvelles fonctionnalités sur le logiciel.
                         </p>
