--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
                         </div>
                     </div>
             </div>
+	    <br><br>
 		
 	    <!--- tableau du projet 1 texte a droite et video a gauche -->
             <div class="projet_box">
@@ -303,7 +304,73 @@
                     </div>
                 </div>
             </div>
-            <br><br> 
+            <br><br>
+		            
+            <!--- tableau du projet 2 video a droite texte a gauche -->
+            <div class="projet_box_1">
+                <!-- Division pour la partie de droite-->
+                    <div class="droite2">
+                        <video autoplay loop muted>
+                            <source src="static/projet/projet_en_attente.mp4" type="video/mp4">
+                          Your browser does not support the video tag.
+                          </video>
+                    </div>
+                    <!-- Division pour la partie de gauche-->
+                    <div class="gauche2">
+                        <h3>Projet Backend PPE • 2023</h3>
+                        <p>A developper</p>
+                        <p>Mettre le lien du dossier.</p>
+                        <!-- Division pour la partie en bas à gauche-->
+                        <div class="bas">
+                            <div>
+                                <a href="https://fr.wikipedia.org/wiki/C_sharp"><b>C#</b></a>
+                                <a href="https://fr.wikipedia.org/wiki/Microsoft_.NET"><b>.NET</b></a>
+                                <a href="https://fr.wikipedia.org/wiki/Entity_Framework"><b>Entity Framework</b></a>
+                                <a href="https://fr.wikipedia.org/wiki/Structured_Query_Language"><b>SQL</b></a>
+                            </div>
+                            <div>
+                            <a href="https://regal-paprenjak-9c5368.netlify.app">
+                                <img src="static/projet/github.png" width="28px">
+                            </a>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            <br><br>
+
+            <!--- tableau du projet 1 texte a droite et video a gauche -->
+            <div class="projet_box">
+                <!-- Division pour la partie de gauche-->
+                <div class="gauche1">
+                    <video autoplay loop muted>
+                        <source src="static/projet/projet_en_attente.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas les vidéos.
+                    </video>
+                </div>
+                <!-- Division pour la partie de droite-->
+                <div class="droite1">
+                    <h3>Projet Frontend PPE • 2023</h3>
+                    <p>A développer.</p>
+                    <p>Mettre le lien du dossier.</p>
+                    <!-- Division pour la partie en bas à gauche-->
+                    <div class="bas">
+                        <div>
+                            <a href="https://fr.wikipedia.org/wiki/C_sharp"><b>C#</b></a>
+                            <a href="https://fr.wikipedia.org/wiki/Microsoft_.NET"><b>.NET</b></a>
+                            <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade"><b>CSS</b></a>
+                            <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language"><b>HTML</b></a>
+                        </div>
+                        <a href="https://regal-paprenjak-9c5368.netlify.app">
+                            <img src="static/projet/github.png" width="28px">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <br><br>
+
+            <h4>Voici le tableau de synthèse correspondant à l'ensemble des projets que j'ai réalisés durant ces deux dernières années : 
+                <a id="rapport" href="/tableau_synthese.pdf"> Tableau de synthèse</a>
+            </h4>
         </section>
         
 
