--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <br><br>
 
             <h4>Voici le tableau de synthèse correspondant à l'ensemble des projets que j'ai réalisés durant ces deux dernières années : 
-                <a id="rapport" href="/tableau_synthese.pdf"> Tableau de synthèse</a>
+                <a id="rapport" href="/tableau_synthese.pdf"> Tableau de synthèse.</a>
             </h4>
         </section>
         
