--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                             <a href="https://fr.wikipedia.org/wiki/Gephi"><b>Gephi</b></a>
                             <a href="https://fr.wikipedia.org/wiki/Interface_de_programmation"><b>API</b></a>
                         </div>
-                        <a href="https://regal-paprenjak-9c5368.netlify.app">
+                        <a href="https://github.com/ThomasDeschampt/Twitter_graph">
                             <img src="static/projet/github.png" width="28px">
                         </a>
                     </div>
