--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                                 <a href="https://fr.wikipedia.org/wiki/Structured_Query_Language"><b>SQL</b></a>
                             </div>
                             <div>
-                            <a href="https://regal-paprenjak-9c5368.netlify.app">
+                            <a href="https://github.com/ThomasDeschampt/BTS_PPE">
                                 <img src="static/projet/github.png" width="28px">
                             </a>
                             </div>
@@ -360,7 +360,7 @@
                             <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade"><b>CSS</b></a>
                             <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language"><b>HTML</b></a>
                         </div>
-                        <a href="https://regal-paprenjak-9c5368.netlify.app">
+                        <a href="https://github.com/ThomasDeschampt/BTS_PPE">
                             <img src="static/projet/github.png" width="28px">
                         </a>
                     </div>
