--- a/index.html
+++ b/index.html
@@ -317,16 +317,23 @@
                     </div>
                     <!-- Division pour la partie de gauche-->
                     <div class="gauche2">
-                        <h3>Projet Backend PPE • 2023</h3>
-                        <p>A developper</p>
-                        <p>Mettre le lien du dossier.</p>
+                        <h3>Service Web - PPE • 2023</h3>
+                        <p>Lors de cette première réalisation de l'épreuve E5 du BTS SIO, j'ai travaillé sur un projet répondant aux attentes 
+                            du laboratoire GSB dans un contexte professionnel. En effet, pour faciliter la réalisation de ses activités, le 
+                            laboratoire souhaite mettre en place un Web Service qui lui permettra de visualiser et de traiter les données de sa base de données.
+                            Ainsi pour répondre à cette demande, j'ai réalisé une base de données et un Web-Service Back-End qui permettra d'intéragir avec la base.</p>
+                        <p>
+                            Pour réaliser ce projet, j'ai utilisé le langage SQL et le logiciel Looping pour mettre en place la base de données ainsi que C# et 
+                            les frameworks .NET et Entity Framework pour le Web-Service.</p>
+                        <p>Vous pouvez retouver le dossier qui résume les réalisations mise en place en cliqant sur le lien suivant : Dossier de réalisations 1.</p>
                         <!-- Division pour la partie en bas à gauche-->
                         <div class="bas">
                             <div>
+                                <a href="https://fr.wikipedia.org/wiki/Structured_Query_Language"><b>SQL</b></a>
+                                <a href="https://www.looping-mcd.fr/"><b>Looping</b></a>
                                 <a href="https://fr.wikipedia.org/wiki/C_sharp"><b>C#</b></a>
                                 <a href="https://fr.wikipedia.org/wiki/Microsoft_.NET"><b>.NET</b></a>
                                 <a href="https://fr.wikipedia.org/wiki/Entity_Framework"><b>Entity Framework</b></a>
-                                <a href="https://fr.wikipedia.org/wiki/Structured_Query_Language"><b>SQL</b></a>
                             </div>
                             <div>
                             <a href="https://github.com/ThomasDeschampt/BTS_PPE">
@@ -349,9 +356,15 @@
                 </div>
                 <!-- Division pour la partie de droite-->
                 <div class="droite1">
-                    <h3>Projet Frontend PPE • 2023</h3>
-                    <p>A développer.</p>
-                    <p>Mettre le lien du dossier.</p>
+                    <h3>Application Frontend PPE • 2023</h3>
+                    <p>Pour la deuxième réalisation de l'épreuve E5 du BTS SIO, j'ai une nouvelle fois travaillé sur un projet qui aura pour but de répondre 
+                        aux besoins du laboratoire GSB. Cette fois ci, l'ojbectif est de créer une application Web qui devra faire appel au Service créé dans la première 
+                    réalisation. L'intérêt sera donc de pouvoir intéragirr et pouvoir visualiser les données, on pourra par exemple retrouver des listes de 
+                    médecins en fonction de leur nom ou département d'activité. L'application se devra donc d'être privée et sécurisé pour garantir la sécurisation
+                des données.</p>
+                <p>Pour réaliser ce projet, j'ai utilisé le langage C# avec framework .NET ainsi que les langages HTML, CSS et JavaScript pour
+                    l'aspect visuel de l'application.</p>
+                    <p>Vous pouvez retouver le dossier qui résume les réalisations mise en place en cliqant sur le lien suivant : Dossier de réalisations 2.</p>
                     <!-- Division pour la partie en bas à gauche-->
                     <div class="bas">
                         <div>
@@ -359,6 +372,7 @@
                             <a href="https://fr.wikipedia.org/wiki/Microsoft_.NET"><b>.NET</b></a>
                             <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade"><b>CSS</b></a>
                             <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language"><b>HTML</b></a>
+                            <a href="https://fr.wikipedia.org/wiki/JavaScript"><b>JavaScript</b></a>
                         </div>
                         <a href="https://github.com/ThomasDeschampt/BTS_PPE">
                             <img src="static/projet/github.png" width="28px">
