--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             </div>
             <br><br>
 		            
-            <!--- tableau du projet 2 video a droite texte a gauche -->
+                        <!--- tableau du projet 2 video a droite texte a gauche -->
             <div class="projet_box_1">
                 <!-- Division pour la partie de droite-->
                     <div class="droite2">
@@ -325,7 +325,7 @@
                         <p>
                             Pour réaliser ce projet, j'ai utilisé le langage SQL et le logiciel Looping pour mettre en place la base de données ainsi que C# et 
                             les frameworks .NET et Entity Framework pour le Web-Service.</p>
-                        <p>Vous pouvez retouver le dossier qui résume les réalisations mise en place en cliqant sur le lien suivant : Dossier de réalisations 1.</p>
+                        <p>Vous pouvez retrouver le dossier qui résume les réalisations mises en place en cliquant sur le lien suivant : Dossier de réalisations 1.</p>
                         <!-- Division pour la partie en bas à gauche-->
                         <div class="bas">
                             <div>
@@ -358,13 +358,13 @@
                 <div class="droite1">
                     <h3>Application Frontend PPE • 2023</h3>
                     <p>Pour la deuxième réalisation de l'épreuve E5 du BTS SIO, j'ai une nouvelle fois travaillé sur un projet qui aura pour but de répondre 
-                        aux besoins du laboratoire GSB. Cette fois ci, l'ojbectif est de créer une application Web qui devra faire appel au Service créé dans la première 
-                    réalisation. L'intérêt sera donc de pouvoir intéragirr et pouvoir visualiser les données, on pourra par exemple retrouver des listes de 
-                    médecins en fonction de leur nom ou département d'activité. L'application se devra donc d'être privée et sécurisé pour garantir la sécurisation
+                        aux besoins du laboratoire GSB. Cette fois ci, l'objectif est de créer une application Web qui devra faire appel au Service créé dans la première 
+                    réalisation. L'intérêt sera donc de pouvoir intéragir et pouvoir visualiser les données, on pourra par exemple retrouver des listes de 
+                    médecins en fonction de leur nom ou département d'activité. L'application se devra donc d'être privée et sécurisée pour garantir la sécurisation
                 des données.</p>
-                <p>Pour réaliser ce projet, j'ai utilisé le langage C# avec framework .NET ainsi que les langages HTML, CSS et JavaScript pour
+                <p>Pour réaliser ce projet, j'ai utilisé le langage C# avec le  framework .NET ainsi que les langages HTML, CSS et JavaScript pour
                     l'aspect visuel de l'application.</p>
-                    <p>Vous pouvez retouver le dossier qui résume les réalisations mise en place en cliqant sur le lien suivant : Dossier de réalisations 2.</p>
+                    <p>Vous pouvez retrouver le dossier qui résume les réalisations mises en place en cliquant sur le lien suivant : Dossier de réalisations 2.</p>
                     <!-- Division pour la partie en bas à gauche-->
                     <div class="bas">
                         <div>
