--- a/index.html
+++ b/index.html
@@ -489,65 +489,78 @@
                 un domaine en plein essor, qui évolue en permanence et pour lequel je porte un intérêt particulier.
                 </p>
                 <p>
-                L'intelligence artificielle est une branche de l'informatique qui va regroupper toutes les méthodes permettant à des machines
+                L'intelligence artificielle est une branche de l'informatique qui va regrouper toutes les méthodes permettant à des machines
                 d'apprendre à résoudre des problèmes et à s'adapter à de nouvelles situations.
                 <br>
-                L'intelligence artificielle est utilisé dans de nombreux domaines (médecine, agriculture, industrie, ...) et 
+                De plus, elle est utilisée dans de nombreux domaines (médecine, agriculture, industrie, ...) et 
                 objets du quotidien comme les GPS, les systèmes de recommandations.
                 <br>
-                De plus, ces dernières années, l'intelligence artificielle est en évolution constante et les nouvelles applications et avancées
-                se font de plus en plus nombreuses. C'est dans ce contexte que l'IA va très probablement boulverser nos quotidiens et révolutionner
-                nos vies. Ainsi, il est important de s'informer et de suivre les actualités de ce domaine pour faire aux enjeux que l'IA va impliquer.
+                Ces dernières années, l'intelligence artificielle est en évolution constante et les nouvelles applications et avancées
+                se font de plus en plus nombreuses. C'est dans ce contexte que l'IA va très probablement bouleverser nos quotidiens et révolutionner
+                nos vies. Ainsi, il est important de s'informer et de suivre les actualités de ce domaine pour faire face aux enjeux que l'IA va impliquer.
                 </p>
                 <p>
                 Pour suivre les actualités de l'intelligence artificielle, je suis le contenu de différents créateurs de contenus 
                 (notamment par le biais de Twitter et de leur vidéos / podcast sur Youtube) qui traitent de ce sujet.) : 
                 <br>
-                <a href="https://twitter.com/DFintelligence">Defend Intelligence</a>
+                <a href="https://twitter.com/DFintelligence">- Defend Intelligence</a>
                 <br>
-                <a href="https://twitter.com/DIMENSION_YT">Dimension</a>
+                <a href="https://twitter.com/DIMENSION_YT">- Dimension</a>
                 <br>
-                <a href="https://twitter.com/UnderscoreTalk">UnderscoreTalk</a>
+                <a href="https://twitter.com/UnderscoreTalk">- UnderscoreTalk</a>
                 <br>
-                <a href="https://twitter.com/Micode">Micode</a>
+                <a href="https://twitter.com/Micode">- Micode</a>
                 </p>
                 <p>
                 En plus de ses sources d'informations j'ai aussi acheter des livres sur l'intelligence artificielle pour apprendre plus en détail son fonctionnement,
-                et pouvoir moi aussi expérimenter et commencer à développéer pas à pas des projets d'intelligence artificielle.
-                <a href="https://www.eyrolles.com/Informatique/Livre/l-intelligence-artificielle-en-pratique-avec-python-9782416010941/">L'intelligence artificielle en pratique avec Python</a>
+                et pouvoir moi aussi expérimenter et commencer à développer pas à pas des projets d'intelligence artificielle.
+                <br>
+                <a href="https://www.eyrolles.com/Informatique/Livre/l-intelligence-artificielle-en-pratique-avec-python-9782416010941/">- L'intelligence artificielle en pratique avec Python</a>
                 </p>
                 <p>
                 Aussi pour m'informer, j'utilise aussi des flux RSS qui me permettent de suivre les actualités de l'IA en temps réel par 
                 le bais de NewsBlur qui me permet de suivre les flux RSS de différents sites :
                 <br>
-                <a href="https://www.theverge.com/ai-artificial-intelligence">The Verge</a>
+                <a href="https://www.theverge.com/ai-artificial-intelligence">- The Verge</a>
                 <br>
-                <a href="https://www.cnil.fr/fr/intelligence-artificielle/">La CNIL</a>
+                <a href="https://www.cnil.fr/fr/intelligence-artificielle/">- La CNIL</a>
                 <br>
-                <a href="https://openai.com/blog">Open IA</a>
+                <a href="https://openai.com/blog">- Open IA</a>
                 <br>
                 </p>
                 <p>
                 Enfin, pour aller plus loin dans cette veille, je vais essayer de développer un projet personnel pour me permettre 
                 de mettre en pratique mes connaissances mais aussi pour me permettre de mieux comprendre le fonctionnement de l'IA et les
-                difficultés auquelles on peut être confronté.
+                difficultés auxquelles on peut être confronté.
                 </p>
 
                 <!--Deuxième vieille-->
                 <h3>Veille juridique</h3>
                 <p>
-                    expliquer ce qu'est une veille juridique
-                    <br>
-                    Pour cette deuxième veille on va parler de la protection des données personnelles.
-                    <br>
-                    pourquoi ce theme
-                    <br>
-                    decrire ce que c'est
-                    <br>
-                    donner des exemples
-                    <br>
-                    comment s'informer
+                    La veille juridique consiste à suivre et à analyser régulièrement les actualités et évolutions des lois et réglementations d’un domaine de droit juridique.
                 </p>
+                <p>
+                    La protection des données est un sujet crucial de nos jours, les informations personnelles sont de plus en plus recherchées par les grandes entreprises 
+                    pour les utiliser le plus souvent à des fins commerciales. De plus, la réglementation relative à la protection évolue régulièrement et chaque nouvelle 
+                    innovation technologique implique elle aussi ces nouvelles régulations. Comme on peut le voir avec la réglementation Mica sur les crypto-monnaies qui  
+                    est actuellement en phase d’expérimentation d’une durée de 3 ans.
+                </p>
+                <p>
+                    Au cours de mon parcours professionnel, je serai très certainement amené à travailler avec des données personnelles ou bien même à travailler sur la gestion de celles-ci. Ainsi faire une veille juridique sur 
+                    le thème de la protection des données est essentiel pour être en mesure de respecter les obligations légales et garantir la confidentialité des données des individus.
+                    J'ai décidé de mettre en place une veille juridique sur la protection des données, en me concentrant principalement sur les législations françaises, mais aussi sur les législation européennes..
+                </p>
+                <p>
+                    Pour me tenir informé de l'actualité de ce domaine j'utilise également des flux RSS pour être notifié des derniers changements en terme de protection des données : 
+                    <br>
+                    <a href="https://www.cnil.fr/fr/actualites">- La CNIL</a>
+                    <br>
+                    <a href="https://edpb.europa.eu/edpb_fr">- EDPB</a>
+                    <br>
+                    <a href="https://www.ssi.gouv.fr/flux-rss/"> - ANSSI</a>
+
+                </p>
+
             </div>
         </section>
 
